--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -494,6 +494,23 @@ Should make startup faster, taken from doom-emacs
     :straight t
     :config (counsel-projectile-mode))
 #+end_src 
+** Notifcations
+#+begin_src emacs-lisp
+  (use-package alert
+    :straight t
+    :config
+    ;; Add the windows desktop notifications if on windows
+    (when (eq system-type 'windows-nt)
+      (alert-define-style
+       'windows-desktop-notification-style
+       :title "Windows Desktop Notification style"
+       :notifier
+       (lambda (info)
+         (let ((notif-id (w32-notification-notify :title (plist-get info :title) :body (plist-get info :message))))
+           ;; Close it after 3 seconds (no new notification can be sent if left unclosed)
+           (run-with-timer 3 nil `(lambda() (w32-notification-close ,notif-id))))))
+      (setq alert-default-style 'windows-desktop-notification-style)))
+#+end_src
 ** Org-Mode
 #+begin_src emacs-lisp
   (use-package org
@@ -670,6 +687,14 @@ We have to compete with notion somehow right?
                              ("C-c n i" . org-roam-node-insert))
                       :config
                       (org-roam-setup)))
+#+end_src
+** Org-wild-notifier
+#+begin_src emacs-lisp
+      (use-package org-wild-notifier
+        :straight t
+        :after org
+        :config
+        )
 #+end_src
 ** Treemacs
 #+begin_src emacs-lisp
@@ -1099,14 +1124,6 @@ Dired is a built-in file manager for Emacs that does some pretty amazing things!
 #+begin_src emacs-lisp
   (use-package elfeed
     :straight t
-    )
-
-  (use-package elfeed-goodies
-    :straight t
-    :after elfeed
-    :ensure t
-    :init
-    (elfeed-goodies/setup)
     )
 
   (use-package elfeed-protocol
