--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -227,7 +227,7 @@ Should make startup faster, taken from doom-emacs
   (use-package ivy-posframe
     :straight t
     :init
-    (setq ivy-posframe-display-functions-alist '((t . ivy-posframe-display-at-window-center)))
+    (setq ivy-posframe-display-functions-alist '((t . ivy-posframe-display-at-frame-center)))
     :config
     (ivy-posframe-mode 1))
 
@@ -252,23 +252,14 @@ Should make startup faster, taken from doom-emacs
   (setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
         doom-themes-enable-italic t) ; if nil, italics is universally disabled
   ;; load the theme
-  (load-theme 'doom-monokai-pro t)
+  (load-theme 'doom-homeage-black t)
 
   (doom-themes-org-config)
-
-  (setq doom-themes-treemacs-theme "doom-monokai-pro")
 
   (doom-themes-treemacs-config)
 
   ;; Enable flashing mode-line on errors
   (doom-themes-visual-bell-config))
-  ;; Enable custom neotree theme (all-the-icons must be installed!)
-  ;;(doom-themes-neotree-config)
-  ;; or for treemacs users
-  ;;(setq doom-themes-treemacs-theme "doom-atom") ; use "doom-colors" for less minimal icon theme
-  ;;(doom-themes-treemacs-config)
-  ;; Corrects (and improves) org-mode's native fontification.
-  ;;(doom-themes-org-config))
 #+end_src
 ** All the Icons (to make doom-themes happy)
 #+begin_src emacs-lisp
@@ -637,29 +628,13 @@ Should make startup faster, taken from doom-emacs
 #+end_src
 ** Org Mode Beautifers 
 We have to compete with notion somehow right?
-*** Org-Modern
-#+begin_src emacs-lisp
-  (use-package org-modern
-    :hook
-    (org-mode . global-org-modern-mode)
-    :custom
-    ;; Org styling
-    (org-hide-emphasis-markers t)
-    (org-pretty-entities t)
-    (org-ellipsis " ▾ ")
-
-    ;; Agenda styling
-    (org-agenda-tags-column 0)
-    (org-agenda-block-separator ?─)
-    (org-agenda-current-time-string "◀── now ─────────────────────────────────────────────────"))
-#+end_src
 *** Org-Superstar 
 #+begin_src emacs-lisp
   (use-package org-superstar
     :after org
     :hook (org-mode . org-superstar-mode)
     :config
-    (setq org-superstar-headline-bullets-list '("◯" "◯" "◯" "◯"))
+    (setq org-superstar-headline-bullets-list '("◯" "◯" "◯" "◯" "◯"))
     (setq org-superstar-remove-leading-stars t)
     (setq org-superstar-item-bullet-alist
         '((?+ . ?•)
