--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -1254,11 +1254,13 @@ Dired is a built-in file manager for Emacs that does some pretty amazing things!
 #+end_src
 *** Elfeed-Goodies
 #+begin_src emacs-lisp
-  (use-package elfeed-goodies
-    :straight t
-    :after (elfeed)
-    :init
-    (elfeed-goodies/setup))
+      (use-package elfeed-goodies
+        :straight t
+        :after (elfeed)
+        :init
+        (elfeed-goodies/setup)
+        :config
+        (setq elfeed-goodies/entry-pane-position 'bottom))
 #+end_src
 ** Telegram
 only god knows why im doing this 
