--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -1254,6 +1254,7 @@ Dired is a built-in file manager for Emacs that does some pretty amazing things!
     :straight t
     :config
     (setq elfeed-use-curl t)
+    (setq browse-url-browser-function 'eww-browse-url)
     )
 
   (use-package elfeed-protocol
@@ -1286,18 +1287,7 @@ Dired is a built-in file manager for Emacs that does some pretty amazing things!
 
   (add-hook 'emacs-startup-hook (elfeed-update))
 
-  ;; elfeed youtube
-  (use-package elfeed-tube
-  :straight t
-  :after elfeed
-  :config
-  ;; (setq elfeed-tube-auto-save-p nil) ; default value
-  ;; (setq elfeed-tube-auto-fetch-p t)  ; default value
-  (elfeed-tube-setup))
-
-  (use-package elfeed-tube-mpv
-  :straight t)
-#+end_src
+    #+end_src
 ** Telegram
 only god knows why im doing this 
 #+begin_src emacs-lisp
